# kaggle-digit-recognizer

./: .gitignore  Makefile  README.md  README.org  pyproj.toml  pyproject.toml
dev/: conda_env.yaml
mlflow/: conda_env.yaml  setup_mamba_env.sh
mlflow/docker_build/: Dockerfile
mlflow/docker_runtime/: Dockerfile
notes/: aug_image2d.ipynb  conv2d_model.ipynb  ein_server.ipynb  split_data_and_train_simple_conv2d_model.note
src/kaggland/digrec/data/: data.py  datapipe.py  load.py  transforms.py
src/kaggland/utils/: image2d.py  model_evaluation.py
src/kaggland/utils/data/: dataloader2.py
src/kaggland/utils/preprocessing/aug/: image2d.py  res.py
test/: test_data_loading.py
tests/test_digrec/: test_data.py
tests/test_utils/test_preprocessing/: test_aug_image2d.py
tools/: run.py
